--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ body {
 
 .logo {
     color: #66C05D;
-    font-size:36px;
+    font-size: 36px;
     font-weight: 700;
 }
 
@@ -62,3 +62,47 @@ body {
     margin-left: 20px;
 }
 
+.header-bottom {
+    padding: 15px 0;
+}
+
+.header-bottom .nav {
+    font-size: 16px;
+    margin: 0;
+
+}
+
+hr {
+    border: none;
+    background-color: #EFEFEF;
+    height: 1px;
+}
+
+.title {
+    font-size:48px;
+    font-weight: 700;
+}
+
+.banner {
+    background-image: url("../assets/img/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    color: #fff;
+}
+
+.banner p {
+    margin-bottom: 50px;
+    max-width: 315px;
+}
+
+.btn {
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    background-color: transparent;
+    padding: 10px 15px;
+}
