--- a/css/main.css
+++ b/css/main.css
@@ -18,24 +18,26 @@ body {
 
 .header {
     background-color: #fff;
+    padding-top: 2px;
 }
 
 .header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 15px 0 12px 0;
 }
 
 .nav {
     justify-content: center;
     display: flex;
     list-style-type: none;
+    padding: 4px 0;
 }
 
 .nav li {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .nav li a {
@@ -47,6 +49,17 @@ body {
     color: #66C05D;
     font-size: 36px;
     font-weight: 700;
+    display: flex;
+    align-items: center;
+    letter-spacing: 4px;
+}
+
+.logo-img {
+    display: block;
+    width: 80px;
+    height: 80px;
+    margin-right: 20px;
+    background-image: url(../assets/img/logo.svg);
 }
 
 .header-info span {
@@ -58,12 +71,23 @@ body {
     border-radius: 20px;
     background-color: transparent;
     border: 2px solid #66C05D;
-    padding: 10px 15px;
-    margin-left: 20px;
+    padding: 10px 25px;
+    margin-left: 36px;
+    transition: 0.2s ease;
 }
 
+.header-info button:hover {
+    background-color: #66C05D;
+}
+
+
 .header-bottom {
-    padding: 15px 0;
+    padding: 20px 0;
+}
+
+.header-bottom .nav li {
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .header-bottom .nav {
@@ -81,6 +105,7 @@ hr {
 .title {
     font-size:48px;
     font-weight: 700;
+    margin-bottom: 42px;
 }
 
 .banner {
@@ -88,14 +113,15 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 159px;
+    padding-bottom: 204px;
     color: #fff;
 }
 
 .banner p {
-    margin-bottom: 50px;
+    margin-bottom: 57px;
     max-width: 315px;
+    line-height: 1.5;
 }
 
 .btn {
@@ -104,5 +130,11 @@ hr {
     border: 2px solid #fff;
     border-radius: 20px;
     background-color: transparent;
-    padding: 10px 15px;
+    padding: 9px 47px;
+    transition: 0.2s ease;
+}
+
+.btn:hover {
+    background-color: #fff;
+    color: #333333;
 }
