--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-
+* {
+    margin: 0;
+}
 body {
     background-color: #EFEFEF;
     box-sizing: border-box;
@@ -74,6 +76,7 @@ body {
     padding: 10px 25px;
     margin-left: 36px;
     transition: 0.2s ease;
+    cursor: pointer;
 }
 
 .header-info button:hover {
@@ -103,9 +106,14 @@ hr {
 }
 
 .title {
-    font-size:48px;
+    font-size: 48px;
     font-weight: 700;
     margin-bottom: 42px;
+}
+
+.title-h2 {
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .banner {
@@ -141,4 +149,120 @@ hr {
 
 .bg-white {
     background-color: #fff;
+    padding: 23px 30px 34px 30px;
+}
+
+.bg-green {
+    background-color: #66C05D;
+    color: #fff;
+    padding: 34px 41px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bg-green-item {
+    flex: 0 0 55%;
+}
+
+.bg-green input {
+    font-size: 14px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 9px 15px;
+    width: 100%;
+    max-width: 225px;
+    box-sizing: border-box;
+}
+
+.bg-green-img {
+    text-align: center;
+    flex: 0 0 31%;
+}
+
+.bg-green .btn {
+    display: block;
+    text-align: center;
+    max-width: 166px;
+    padding: 6px 0;
+}
+
+.bg-green, p {
+    line-height: 1.5;
+    margin-bottom: 24px;
+}
+
+.bg-green, h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 21px;
+}
+
+.catalog {
+    padding-top: 60px;
+}
+
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4 1fr);
+    grid-gap: 19px 30px;
+}
+
+.grid-item-title {
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+
+.grid-item-img {
+    grid-column: 4/5;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.grid-item-left {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    margin-top: 80px;
+}
+
+.grid-item-right {
+    grid-column: 3/5;
+    grid-row: 3/4;
+    margin-top: 80px;
+}
+
+.grid-item-catalog {
+    text-align: center;
+}
+
+.grid-item-catalog .bg-white {
+    padding: 23px 30px;
+}
+
+.cards {
+    margin-bottom: 14px;
+}
+
+.grid-title {
+    line-height: 1.5;
+}
+
+.grid-price {
+    font-size: 21px;
+    font-weight: 500;
+    margin-top: 14px;
+    letter-spacing: 1px;
+    margin-bottom: 25px;
+}
+
+.grid-btn {
+    border-radius: 30px;
+    background-color: #66C05D;
+    border: 2px solid #66C05D;
+    color: #fff;
+    padding: 6px 41px;
+    text-decoration: none;
+    transition: 0.2s ease;
+    cursor: pointer;
 }
