--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-* {
-    margin: 0;
-}
 body {
     background-color: #EFEFEF;
     box-sizing: border-box;
@@ -140,6 +137,7 @@ hr {
     background-color: transparent;
     padding: 9px 47px;
     transition: 0.2s ease;
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -165,6 +163,7 @@ hr {
     flex: 0 0 55%;
 }
 
+
 .bg-green input {
     font-size: 14px;
     border: 1px solid #fff;
@@ -176,32 +175,25 @@ hr {
 }
 
 .bg-green-img {
-    text-align: center;
     flex: 0 0 31%;
+    text-align: center;
 }
 
-.bg-green .btn {
+.bg-green.btn {
     display: block;
     text-align: center;
     max-width: 166px;
     padding: 6px 0;
 }
 
-.bg-green, p {
-    line-height: 1.5;
-    margin-bottom: 24px;
-}
-
-.bg-green, h3 {
-    font-size: 14px;
+.bg-green h3 {
+    font-size: 18px ;
     font-weight: 700;
-    margin-bottom: 21px;
 }
 
 .catalog {
     padding-top: 60px;
 }
-
 
 .grid {
     display: grid;
